# ai-retouch-studio

./: .gitignore  LICENSE  README.md  build_and_test.py
.github/workflows/: ci-conda.yml  npm-publish.yml  pypi-publish.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: luts.py  retouch.py  segmentation.py
backend/app/core/: config.py
backend/app/services/: ai_service.py  diffusion_processor.py  enhancement_service.py  lut_service.py
backend/scripts/: download_models.py
docs/: DEMO_GUIDE.md  README.md
frontend/: .npmrc  index.html  manifest.json  package.json
frontend/css/: main.css
frontend/src/: main.js  photoshop-bridge.js
infrastructure/: docker-compose.yml  init-db.sql  start-dev.sh
quality/tests/api/: test_health.py
quality/tests/services/: test_lut_service.py
